# cc-myasl

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cc-myasl.schema.json
.github/workflows/: ci.yml  release.yml
docs/: plan.md  research.md  security-leak-audit-2026-04-27.md  security-review.md  session-2026-04-26.md
docs/plans/: 2026-04-26-rust-statusline.md  2026-05-01-phase1-structured-config.md  2026-05-01-phase2-placeholder-expansion.md  2026-05-10-phase4-builder-tui.md
docs/plans/completed/: 2026-04-26-rust-statusline.md  2026-05-01-phase1-structured-config.md  2026-05-01-phase2-placeholder-expansion.md  2026-05-01-phase3-interactive-tui.md  2026-05-10-phase4-builder-tui.md
scripts/: check-invariants.sh  check-loc.sh  install.sh
src/: args.rs  args_tests.rs  check.rs  check_tests.rs  creds.rs  debug.rs  error.rs  lib.rs  main.rs  main_tests.rs  payload.rs  payload_mapping.rs  payload_mapping_git_tests.rs  payload_mapping_tests.rs  payload_tests.rs  time.rs
src/api/: mod.rs  response.rs  retry.rs
src/cache/: atomic_helper.rs  backoff.rs  lock.rs  mod.rs
src/config/: builtins.rs  builtins_tests.rs  mod.rs  named_color.rs  render.rs  render_color_tests.rs  render_inline_tests.rs  render_powerline.rs  render_powerline_tests.rs  render_tests.rs  schema.rs  schema_tests.rs  schema_tests_b.rs  schema_tests_color.rs  tests.rs  tests_b.rs  tests_c.rs  tests_d.rs
src/config/builtins/: builtins_tests.rs  templates.rs
src/format/: catalog.rs  mod.rs  parser.rs  thresholds.rs  values.rs  values_color_tests.rs  values_tests.rs
src/format/placeholders/: context_tests.rs  cost_tests.rs  git_tests.rs  mod.rs  session_tests.rs  tests.rs  tokens_tests.rs  workspace_tests.rs
src/git/: mod.rs  status.rs  tests.rs
src/tui/: ansi.rs  ansi_tests.rs  app.rs  app4.rs  app4_handle.rs  app4_tests.rs  app_color.rs  app_editor.rs  app_handle.rs  app_help_tests.rs  app_picker.rs  app_powerline_tests.rs  app_save.rs  app_save_tests.rs  app_tests.rs  app_tests_b.rs  builder.rs  builder_tests.rs  catalog.rs  catalog_tests.rs  color_picker_tests.rs  draw.rs  draw4.rs  filter_tests.rs  integration_tests.rs  mod.rs  picker_tests.rs  preview.rs  preview_fixture.json  save.rs
src/tui/overlays/: color_picker.rs  confirm.rs  help.rs  mod.rs  save.rs  tests.rs
src/tui/panes/: appearance.rs  appearance_tests.rs  bottom.rs  bottom_tests.rs  middle.rs  middle_tests.rs  middle_tests_b.rs  mod.rs  top.rs  top_tests.rs
src/tui/widgets/: color_picker.rs  help.rs  line_list.rs  mod.rs  placeholder_picker.rs  segment_editor.rs  segment_list.rs  status.rs
templates/: README.md  bars.txt  colored.txt  compact.txt  default.txt  emoji.txt  emoji_verbose.txt  minimal.txt  verbose.txt
tests/: check_loc.rs  configure_no_tty.rs  golden.rs  golden_phase1.rs  golden_phase2.rs  golden_phase3.rs  golden_phase4.rs  smoke.rs
tests/fixtures/: api_key_no_rate_limits.json  extra_usage_enabled.json  full-payload.json  malformed_field.json  pro_max_with_rate_limits.json
tests/snapshots/: builtin-outputs.txt
