[package]
name = "cc-myasl"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "cc-myasl — My Yet Another Status Line for Claude Code (remaining 5h/7d Claude.ai token quota)"
repository = "https://github.com/jLAM-ERR/cc-myasl"
readme = "README.md"
keywords = ["claude-code", "status-line", "cli", "anthropic"]
categories = ["command-line-utilities"]
rust-version = "1.83"

[[bin]]
name = "cc-myasl"
path = "src/main.rs"

[dependencies]
ureq = { version = "2", features = ["rustls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
anyhow = "1"

[dev-dependencies]
mockito = "1"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
